[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constela"
version = "0.1.0"
description = "CLI para calcular y interpretar carta astral con LLM open source"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Constela Contributors" }
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.scripts]
constela = "constela.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
